--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mock-data": "json-server  --watch mock-data/users/* --port 5002"
   },
   "dependencies": {
+    "country-state-city": "^3.1.4",
     "glob": "^10.2.2",
     "nodemon": "^2.0.22"
   }
