--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "hoaxer": "^1.0.0",
     "json-server": "^0.17.3"
   },
@@ -14,6 +14,7 @@
   "dependencies": {
     "country-state-city": "^3.1.4",
     "glob": "^10.2.2",
+    "minimatch": "^9.0.0",
     "nodemon": "^2.0.22"
   }
 }
