--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mock-data": "json-server  --watch mock-data/users/* --port 5002"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "country-state-city": "^3.1.4",
+    "express": "^4.18.2",
     "glob": "^10.2.2",
     "nodemon": "^2.0.22"
   }
